# tensortrend

./: .gitignore  README.md  requirements.txt
Documentation/: accessdata.docx
ML_model/: LSTMBIN.ipynb  LSTMBIN2.ipynb  LSTMBIN3.ipynb  LSTMBIN4.ipynb  hmm_test.ipynb  xgboost_bin_2.ipynb  xgboost_bin_pca.ipynb  xgboostv3.py
app/: StockPredictor.cpp
app/predictor/: StockPredictor.cpp  StockPredictor.h
app/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/csv/Coca/: Coca_prices.csv  LSTMdata.csv  XGBoostdata.csv  completerawdata.csv  xgboostv2.csv
data/csv/DSG/: DSG_prices.csv  LSTMdata.csv  completerawdata.csv
data/csv/Google/: Google_prices.csv  LSTMdata.csv  XGBoostdata.csv  completerawdata.csv  xgboostv2.csv
data/csv/Nvidia/: Nvidia_prices.csv
data/csv/Tesla/: Tesla_prices.csv
data/scripts/: collectprice.py
data/scripts/Coca/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/DSG/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/Google/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/JNJ/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/Johnson and Johnson/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/Nvidia/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/Tesla/: collectprice.py  fetch_data_ml.py  process_ml_data.py
data/scripts/merge/: merge.py
